--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "AGStopwatch",
+  "name": "agstopwatch",
   "version": "0.0.1",
   "description": "",
-  "main": "agstopwatch.js",
+  "main": "AGStopwatch.js",
   "scripts": {
-	"prepublish": "tsc -d -c agstopwatch.ts",
+	"prepublish": "tsc -d -c --target ES5 AGStopwatch.ts",
     "test": "mocha"
   },
   "repository": {
